syntax = "proto3";

package cart;

option go_package = "pkg/api/cartpb";

import "google/api/annotations.proto";

service CartService {
  rpc AddItem(AddItemRequest) returns (CartResponse) {
    option (google.api.http) = {
      post: "/cart/item/add"
      body: "*"
    };
  }

  rpc DeleteItem(DeleteItemRequest) returns (CartResponse) {
    option (google.api.http) = {
      delete: "/cart/item/delete"
    };
  }

  rpc ClearCart(ClearCartRequest) returns (CartResponse) {
    option (google.api.http) = {
      post: "/cart/clear"
      body: "*"
    };
  }

  rpc ListCart(ListCartRequest) returns (ListCartResponse) {
    option (google.api.http) = {
      get: "/cart/list"
    };
  }
}

message AddItemRequest {
  string user_id = 1;
  string sku = 2;
  int32 count = 3;
}

message DeleteItemRequest {
  string user_id = 1;
  string sku = 2;
}

message ClearCartRequest {
  string user_id = 1;
}

message ListCartRequest {
  string user_id = 1;
}

message CartResponse {
  string message = 1;
}

message CartItem {
  string sku = 1;
  int32 count = 2;
}

message ListCartResponse {
  string user_id = 1;
  repeated CartItem items = 2;
}
